--- a/Angular/src/app/modules/shop/components/cart/cart.component.html
+++ b/Angular/src/app/modules/shop/components/cart/cart.component.html
@@ -15,6 +15,6 @@
     <div *ngIf="cartItems.length !== 0">
         <p>total price: {{ totalPrice }}</p>
 
-        <button (click)="checkout()" >Checkout!</button>
+        <button (click)="createOrder()" >Checkout!</button>
     </div>
 </div>
